# ovpn-ohos

./: .gitignore  .gitmodules  README.md  build-profile.json5  dep-build.sh  oh-package.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  model.hpp  vpn_client.cpp
entry/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
entry/src/main/ets/components/: CertMgr.ts  Common.ets  VpnItem.ets
entry/src/main/ets/entryability/: EntryAbility.ts
entry/src/main/ets/extability/: OvpnExtAbility.ts
entry/src/main/ets/model/: Logger.ets
entry/src/main/ets/pages/: Browser.ets  Index.ets  Log.ets
entry/src/main/resources/base/element/: color.json  string.json
entry/src/main/resources/base/profile/: main_pages.json
entry/src/main/resources/en_US/element/: string.json
